--- a/src/pages/share/Footer/Footer.css
+++ b/src/pages/share/Footer/Footer.css
@@ -4,3 +4,10 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
 }
+
+@media only screen and (max-width: 576px) {
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+  }
