--- a/src/pages/share/Footer/Footer.css
+++ b/src/pages/share/Footer/Footer.css
@@ -5,9 +5,18 @@
     grid-template-columns: repeat(4,1fr);
 }
 
+.social img{
+    width: 40px;
+    padding-right: 5px;
+}
+
 @media only screen and (max-width: 576px) {
     .footer {
         display: grid;
         grid-template-columns: 1fr;
+    }
+
+    .socialConnect{
+        padding-left: 48px;
     }
   }
