--- a/src/pages/ManageInvetories/ManageInventories.css
+++ b/src/pages/ManageInvetories/ManageInventories.css
@@ -1,3 +1,12 @@
-.inventories{
+/* .inventories{
     min-height: 400px;
+} */
+
+.addbtn{
+    background-color: #182D36;
+    color: white;
+}
+.addbtn a{
+    text-decoration: none;
+    color: white;
 }
