--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,9 +3,46 @@
     grid-template-columns: repeat(2,1fr);
 }
 
+.authors-container{
+    margin: 50px;
+
+    border-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+}
+
+.authors-container h2{
+    margin-top: 20px;
+    text-align: center;
+
+}
+
+.author{
+    padding: 10px;
+    margin: auto;
+}
+.author img{
+    border-radius: 50%;
+}
+
 @media only screen and (max-width: 576px){
     .cardContainer{
         display: flex;
         flex-direction: column;
+    }
+
+    .authors-container{
+        width: 400px;
+    }
+    .authors{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .authors-container h2{
+        display:inline-block;
+        margin-top: 30px;
+        text-align: center;
+    
     }
 }
