--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -30,9 +30,12 @@
         display: flex;
         flex-direction: column;
     }
-
+    
+    .read{
+        margin-bottom: 30px;
+    }
     .authors-container{
-        width: 400px;
+        width: 300px;
     }
     .authors{
         display: flex;
